--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
   </head>
   <body>
     <div id="root">
-      <div id="boot-status" style="font:14px/1.4 monospace; padding:18px; color:#ffd83b; text-align:center">
+      <div id="boot-status" class="boot-status">
         Loading DotDashDot... (If this stays, open DevTools Console)
       </div>
-      <noscript style="display:block;padding:12px;font:13px monospace;color:#ff5555">
+      <noscript class="noscript">
         JavaScript required – enable it to use the app.
       </noscript>
     </div>
