--- a/index.html
+++ b/index.html
@@ -5,17 +5,18 @@
     <title>DotDashDot – Morse Code Translator</title>
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <meta name="description" content="DotDashDot – Fast, friendly Morse code translator & keyer. Type, listen, learn, save. Retro audio styles and adjustable WPM / tone." />
-    <link rel="canonical" href="https://YOUR_USERNAME.github.io/dotdashdot_morsecode_translator/" />
+  <link rel="canonical" href="https://shivah99.github.io/dotdashdot_morsecode_translator/" />
     <meta property="og:title" content="DotDashDot – Morse Code Translator" />
     <meta property="og:description" content="Type English ↔ Morse, play audio with custom tones & key sounds, and learn interactively." />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://YOUR_USERNAME.github.io/dotdashdot_morsecode_translator/" />
-    <meta property="og:image" content="https://YOUR_USERNAME.github.io/dotdashdot_morsecode_translator/og-cover.png" />
+  <meta property="og:url" content="https://shivah99.github.io/dotdashdot_morsecode_translator/" />
+  <meta property="og:image" content="https://shivah99.github.io/dotdashdot_morsecode_translator/og-cover.png" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="DotDashDot – Morse Code Translator" />
     <meta name="twitter:description" content="Play, translate & learn Morse with playful retro key sounds." />
-    <meta name="twitter:image" content="https://YOUR_USERNAME.github.io/dotdashdot_morsecode_translator/og-cover.png" />
-    <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg'><text y='.9em' font-size='90'>.-.</text></svg>">
+  <meta name="twitter:image" content="https://shivah99.github.io/dotdashdot_morsecode_translator/og-cover.png" />
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+  <link rel="icon" type="image/png" href="/favicon.png" sizes="32x32" />
   </head>
   <body>
     <div id="root">
